[package]
name = "advent23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15" } 
intel-mkl-src = "0.8"
ndarray-linalg = { version = "0.16", features = ["intel-mkl"] }
num = "0.4"
once_cell = "1"
regex = "1"
rand = "0.8"